--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,17 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+
+<h2>    Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?</h2>
+<p>Nej, har inte använt markdown innan, förutom någon gång  då jag inte visste att jag använde det. Jag har använt ramverk som bootstrap och django innan, men detta verkar lite mer invecklat. Kanske pga att vi använder markdown vilket jag inte har blivit så förtjust i. </p>
+
+
+  <h2>  Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?</h2>
+<p> Inte "my cup of tea". Jag gillar mer att saker funkar, sen hur de ser ut, det brukar jag inte lägga så mycket tid på. Men i slutändan är det ju en av sakerna som bedöms mest av en användare, så det är en "necessary evil" tyvärr, i mitt tycke. </p>
+
+<h2> Hur kändes det att styla webbplatsen med CSS? Gick det bra? </h2>
+<p>När jag fattade hur all hängde ihop blev det ok. Själva CSSen är inget nytt, bara allt fluff runt omkring. Jag är tacksam i alla fall att man kan använda html i markdown.
+
+<h2>    Vilken är din TIL för detta kmom?</h2>
+<p> Markdown, eller i alla fall att det finns, kan inte säga att jag fullkommligt förstår det än. Kan inte säga att jag rikting hänger med på vad syftet är med markdown eller varför det skulle vara fördelaktigt att använda det istället för HTML. Men jag hoppas allt klarnar med tiden.</p>
