--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -1,6 +1,16 @@
 ---
 ---
-Redovisning kmom03
-=========================
+
+# Redovisning kmom03
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+
+Det vertikala griddet var stödjande för denna konstruktion, som är baserad på detta ramverk. I och med att all struktur på sidan redan finns med deras klasser så blir det nästan ett måste att använda detta vertikala grid. Men....jag börjar känna mig tjatig nu....jag tycker det är ett väldigt komplicerat system för att uppnå gridfunktionalitet när man kan använda sig av CSS grid. Men då hade det varit bättre att göra allt från scratch utan ramverket. Är andra php ramverk baserade på liknande gridsystem, eller har man mer frihet där?
+
+Vad gäller det horisontella griddet kan jag väl tycka som jag gör för vertikala griddet. Man kan åstakomma en bra layout för sin text med det men i slutändan tycker jag också det är "bloated complexity" med magiskt nummer, radhöjder o.s.v.
+
+Jag valde Arial som typsnitt. Det var inga stora interna debatter om typsnitt hoss mig, arial brukar vara det jag kör på som standard, förutom Times New Roman när jag skriver dokument.
+
+Jag har jobbat med CSS grid som jag nämnde ovan, vilket jag föredrar då det är väldigt mycket enklare och jag tycker man har mer frihet att göra lite som man vill utan att ha några restriktioner från fördefinierade ramverk och dess regler. Jag hade faktistk börjat implementera CSS grid i kmom02 som jag hade tänkt återanvända i kmom03 då jag såg att det stod att det skulle handla om GRID. Men nu var det ju inte alls samma grid så jag fick börja om från nytt för kmom03 och kunde ej återanvända mina less moduler från kmom02. Jag valde att göra allt LESS till kmom03 på nytt då jag inte kunde använda margin/padding left eller right för då föll griddet ihop.
+
+Det gick bra att införa responsivitet, video guiden för griddet var jätte bra och utförlig och jag kunde lätt hänga med.
