--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,10 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+För skrivuppgiften valde jag att analysera 3 olika spelplattformer. Jag tyckte det var bra att använda sidor från samma kategori för att få en bra jämförelse, samt att kombinera mitt intresse för spel med denna uppgift. 
+
+När jag först läste "<a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_minimalistic">minimalistiskt</a>" tänkte jag en sida utan någon stil alls, endast HTML. Sen insåg jag ju att det inte riktigt var det som var tänkt, och det hade ju sett uruselt ut. Jag valde till slut ha en svartvit sida (som jag hittils också har använt mig av, tycker om den stilen). Sjävla bild och innehåll på <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_minimalistic">minimalistic</a> var samma som jag använda på <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_colorful">colorful</a>, men i gråskala. Tanken var att se skillnaden mellan exakt samma innehåll med och utan färg. För <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_colorful">colorful</a> tänkte jag "det blir inte mer färgglatt än den indiska Holi festivalen". Därför valde jag att ha med en bild från holi som bakgrund, och ha header och footer bakgrund i en gradient av de mest prominenta färgerna på bilden. För <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_dark">dark</a> temat valde jag en natthimmel som bakgrund. Bilden har en härlig gradient från mörkblått till violet som jag tyckte passade väl. Jag försökte komplementera detta med en liknande gradient på header och footer som går åt motsatt håll. Jag hade ingen accentfärg med i någon av teman. För typografin hade jag två mål, eller bekymmer jag ville tackla. Ena var att jag ville ha texten på bakgrunden utan något extra bakgrundslager bakom texten. Detta innebar, pga det färgglada temat, att texten syntes dåligt på vissa platser. Jag provade med olika färger, och svart syntes nog bäst, men jag tyckte inte det passade. Jag gillade vit färg på texten men som sagt den syntes dåligt på vissa platser. Därför valde jag att öka fontstorleken samtidigt som jag använde en fet stil för att öka läsbarheten av den vita texten. Jag valde också kursiv stil...jag vet inte riktigt om jag hade nån medveten tanke bakom det, tyckte mest det såg fint ut. 
+
+Strukturen på min kod löste jag genom att ha den <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_minimalistic">minimalistiska</a> som base där jag har allt med fonts och layout att göra. Där importerade jag också alla lessmoduler som behövdes såsom gridden och responsiva menyn etc. I <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_colorful">colorful</a> och <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_dark">dark</a> importerade jag <a href="http://www.student.bth.se/~hami19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_minimalistic">minimalistic</a> modulen och gjorde de få ändringar som behövdes (t.ex. ta bort gråskalefiltret och ändra backgrundsbild).
+
+Today I learnt lite mer om färger och färgschema och vilka verktyg som finns för att underlätta val av komplementerande färger.
