--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,12 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+Mitt intryck/erfarenhet med undersökning av webbplatsers laddningstid var "oj, vad lång tid det tog" för det mesta. Jag kom fram till att även om laddningstiderna på papper är långa, kan sidan ända uppfattas som snabb och responsiv. Jag tyckte inte att det var några bekymmer att navigera på de sidorna jag valt, äver de med enorma laddningstider.
+
+Jag tycket det var jätte smidingt med Cimage när jag väl fick grepp om hur det funkade. Annars är det photoshop jag croppar och grejar med innan jag får inte det på en sida. Men då tar de mycket längre tid innan man kan få det som man vill. Med Cimage kunde man snabbt och smidigt testa lite olike dimensioner och avskurningar och därment kom man mycket snabbare fram till det man ville.
+
+Mycket smidig. Jag gillade verkligen den, den underlättade mycket för en så man slapp tänkta på hur man skulle aligna bilderna och texted, samt hur man skulle få bilderna responsiva.
+
+Nedladdningstider är nog inget jag tänkt på innan detta kursmoment. Eller i alla fall inte på ett direkt sätt. Jag kan ju bli frustrerad om en sida tar lång tid på sig, men har inte riktigt tänkt på det från kodens perspektiv innan. Jag hade heller ingen aning om att man med verktyg som t.ex Cimage kan ändra formatet på bilder så smidigt, trodde man fick göra det manuellt alltid. Det var intressant att se när Mikael visade skillnaden på storleken på bilderna och hur mycket man lätt kunde få ner de med Cimage.
+
+Today I learnt om en del olika grejer. För det första, hur mycket laddningstider kan påverkar beroende på hur mycket resurser man väljer att ladda på sin sida. För det andra, även om man har en lång laddningstid, kanske inte detta alltid påverkar Ux så mycket, i alla fall gjorde det inte det för mig på de sidorna jag analyserade. Det tredje är verktyg som Cimage och hur man kan processera bilder med hjälp av sådana verktyg utan att behöva använda sig av bildredigeringsprogramm som photoshop/gimp.
