--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -3,4 +3,5 @@
 Redovisning kmom06
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Att tänkta i termer av designelemenet och principer är inget som kommer naturligt till mig. Deta har varit en uppförsbacke hela detta kmom för mig. Det jag fick med mig från uppgiften var väl att sätta ord på det jag tycker om en sida. Inget jag egentligen tänker på, men detta kmom tvingade fram mer medvetet tänkande på just detta. Mina teman för detta kmom är inget jag är sådär jättestolt över. Det var en som sagt svårt för mig att komma på vad jag skulle göra och jag tror det nog syns för det är rätt simpla teman jag har gjort. Jag förstår i alla fall var kurmomentet ville få fram, att jag ska kunna kritisera en sida utifrån dessa perspektiv, vilket jag tror jag har lite koll på i alla fall. Men att själv ta fram eller komma på en design, det är något som jag verkligen inte hajar. Final touch för mig kan var som någon slags wow faktor som jag nämnde i något av föregående kmom. Vet inte om jag tycker det finns något generelt man kan säga är en final touch, det är nog olika från sida till sida, och till vilken målgrupp man riktar sig.
+Today I learnt hur man kan tänkta när man ska "kritisera" en sida på dess designval och teman. Allt från färger och layout till bilder och kontrast. 
