--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -1,6 +1,34 @@
 ---
 ---
-Redovisning kmom10
-=========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+# Redovisning kmom10
+
+1.1)
+
+Uppdrag 1: Analys aktuell webbplatsdesign
+
+Jag valde att analysera och jämför sidorna för tre olika snabbmatskedjor. Jag tänkte att det skulle vara roligt att titta på några av mina favoriter. Tanken bakom analysen var att titta på hur de olika resturanger använder framförallt bilder för att "förföra" besökaren till att välja deras mat. Jag tittade äver på andra faktorer i sidan design som kunde göra det lättare för besökaren att välja just de. En bra, snabb och lätt erfarenhet på en webbsida för en matkedja kan ju skapa en stammis. En viktig faktor förutom bilder som jag tittade på var hur lätt det var att antigen beställa mat via hemsidan, eller få info om närmsta butik.
+
+Uppdrag 3: Webbplats
+Jag valde här att göra en webbplats till Bew Gorp. Scenariot är att han är en webbprogrammerare som har skapat en patenterad webbaserad analysplatform. Denna platform kan användas för diverse business intelligens analyser av olika sidor, och användaren kan sen använde den samlade datan för besulta företagsstrategier och att utveckla sitt egen företag. Jag använde mig av bilder och text från nätet och jag påpekar detta i om texten, att det inte är mina egna ord eller bilder. Jag valde att använda min me/redovisa som grund för projektet då jag tyckte det var lättast och smidigast att få igång i och med att jag använder nästan samma layout som för tidigare kmom.
+
+Uppdrag 4: Tema
+Jag valde att använda mig av ett ljus backgrund mörk text tema som jag tyckte passa bra för en mer professionel webbplats som ska ge ett profesionellt och tryggt intryck till potentiella kunder som besöker sidan. Bilderna jag hitta som jag tyckte passade bra hade ett mörkblått till ljusblått tema, så jag valde detta som palett för sidan.
+
+1.2)
+Projektet i sig gick ganska lätt att genomföra i och med att den messta underliggande struktur kunde jag ta direkt från föregående kmom. Det som strulade och tog tid var att komma på vad jag skulle göra. Jag visste nog direkt att Bew Gorp kunden var vinnaren men det to en låååång tid innan jag kom fram till att han skulle vara skaparen av en analysplatform. Det var under en konversation med en vän som detta poppade upp och efter det gick det rätt snabbt att få ut en webbplats. Projektet var rimligt för denna kurs då det knöt ihop det vi har gjort under de senaste 2 månaderna. Analys uppdraget kanske var lite uttjatat i och med att vi har gjort en hel del såna redan.
+
+1.3)
+Jag hade mycket svårt för denna kurs måste jag säga. Svårt att förstå exakt vad vi skulle få ut ur den. Jag menar jag förstår att det handlar om design men många saker tyckte jag var onödiga och vissa saker som jag tyckte var viktigt spenderades den nästan ingen tid på. Till exempel ramverket förstod jag inte alls resonemanget bakom. Varför komplicera hela kursen med ramverket? Speciellt när vi precis hade kommit från htmlphp kursen där vi byggt våra egna sidor, så skulle vi i denna kurs ignorera allt det, och istället använda ramverket och skriva sidorna i markdown. Varför inte bygga på det vi hade i htmlphp kursen (i alla fall html och css). I kmom06 hade Emil en genomgån där han tog en sida och sen skulle försöka koda den med html och css, och där tänkte jag (Ja! varför kan vi inte göra det istället, hade varit så mycket mer givande). I nuläget kändes ramverket mer hindrande än hjälpande, som att man fick koda med ena handen bakom ryggen nästan.
+
+Jag tyckte vi kunde ha lagt lite mer krut på hur LESS fungerar. Jag vet att man skulle läsa på detta på egen hand men det hade varit jätte intressant om man hade några kmom där man lär sig hur man skulle implementera LESS om man inte var i ett ramverk. För myckte tid lades på designelement/principer. Layout, färg, bild och design i 4 olika kmom. Det kunde kondenserar till 1 eller max 2 kmom och istället lägga resterande veckor på något annat, som typ en djupare genomgång av LESS, eller uppgifter som den som Emil gick igenom i kmom06 där vi skulle få ta en valfri sida och försöka replikera den.
+
+Så mina förslag till kommande kurstillfälle är:
+
+1) Använd ren html och css utan något ramverk. Det kan bli mer kodande för studenten men i mitt tyckte hade det varit oändligt mer givande.
+
+2) Mer krut på LESS, en djupare inblick i hur det funkar.
+
+3) max 2 kmom på designelement/principer, då det blev väldigt uttjatat mot slutet.<br>
+ 
+ Kursen ger jag 3/10.
